hphp/test/zend/good/tests/classes/constants_error_007.php.expectf

Fatal error: You cannot decorate this argument as inout in %s/constants_error_007.php on line 10
